@@ -149,6 +149,7 @@ Tag-Team Pinball (Free Play)
 Tag-Team Pinball (German)
 Tag-Team Pinball (German Free Play)
 Tag-Team Pinball (rev.2 Free Play)
+Teenage Mutant Ninja Turtles (1.04 German)
 TX-Sector (Free Play)
 TX-Sector (French)
 TX-Sector (French Free Play)
